--- a/templates/components/apps/directorio/contactos/card.html
+++ b/templates/components/apps/directorio/contactos/card.html
@@ -118,7 +118,7 @@
 
                         {% if telefono.es_celular %}
                             <a target="_blank"
-                               href="https://api.whatsapp.com/send/?phone={{ telefono.telefono }}"
+                               href="{{ telefono.whatsapp }}"
                                class="tooltip"
                                data-tip="WhatsApp">
                                 <span class="icon-[logos--whatsapp-icon] text-green-500"></span>
